--- a/docs/jet.rst.j2
+++ b/docs/jet.rst.j2
@@ -1,8 +1,9 @@
 Junos Extension Toolkit
 =======================
 
+table
+------
 
-App table
----------
+{{ table }}
 
 Add here a table of all JET Apps
