--- a/docs/_static/css/my_theme.css
+++ b/docs/_static/css/my_theme.css
@@ -11,3 +11,40 @@
 .wy-nav-content {
     max-width: 100%;
 }
+
+
+.jnpr-name {
+  width: 120px !important;
+}
+
+td.jnpr-test, td.jnpr-doc {
+  width: 35px !important;
+}
+
+.jnpr-support {
+  width: 60px !important;
+}
+
+.jnpr-table th {
+  vertical-align: middle !important;
+  white-space: normal !important;
+}
+
+.jnpr-desc {
+  white-space: normal !important;
+}
+
+/* Define picture size */
+td.jnpr-test img, td.jnpr-doc img {
+  height: 30px !important;
+  width: 30px !important;
+}
+
+/*padding-right: 0px !important;
+padding-left: 0px !important;
+padding-top: 0px !important;
+padding-bottom: 0px !important;
+margin-right: 6px;
+margin-left: 6px;
+margin-top: 6px;
+margin-bottom: 6px;*/
